--- a/travel-blog/src/App.scss
+++ b/travel-blog/src/App.scss
@@ -30,6 +30,7 @@ img{
 
 .grid-container {
   display: grid;
+  width:$site-width;
   grid-template-columns: auto auto auto;
 }
 
@@ -41,6 +42,7 @@ img{
 }
 .grid-container__heroBackground { 
   grid-area: 2 / span 6;
+  width:$hero-width;
   margin:0 15px;
  }
 .grid-container__header { 
@@ -64,7 +66,7 @@ img{
   margin-right:60px;
   p{
     text-align: justify;
-    font-size:12px;
+    font-size:15px;
   }
   h2{
     text-align: left;
@@ -82,9 +84,10 @@ img{
     text-align: left;
     padding:3px 0;
     div{
-      font-size: 20px;
+      font-size: 24px;
       padding:0px;
       margin:0px;
+      font-weight: 400;
     }
     span{
       font-size:10px;
